--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "typeit-react": "^2.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
